--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -25,6 +25,11 @@ sites:
     url: https://us.bored.k8slens.dev/healthz
   - name: checkout.k8slens.dev
     url: https://checkout.k8slens.dev
+  - name: https://k8slens.zendesk.com
+    url: https://k8slens.zendesk.com
+    expectedStatusCodes:
+    - 301
+    __dangerous__body_down_if_text_missing: 'You are being <a href="https://support.k8slens.dev/hc">redirected</a>'
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
