--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -27,6 +27,7 @@ sites:
     url: https://checkout.k8slens.dev
   - name: https://k8slens.zendesk.com
     url: https://k8slens.zendesk.com
+    maxRedirects: 0
     expectedStatusCodes:
     - 301
     __dangerous__body_down_if_text_missing: 'You are being <a href="https://support.k8slens.dev/hc">redirected</a>'
